2008-09-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-07
	* improvements to OutputModuleDialog, requested by Bryan&Tulika
	* add triggerTriggerEventWithRefs checkbox
	* add rawDataCollector to the FEDRawDataCollection keep-statement
	* replace all occurences of 'rawDataCollector' in any [v]string
	parameter value with 'source'
	* order products alphabetically in the table

2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-25-06 * fix to offline2online to avoid null pointer
	exception when replacing globalTag * fix to parser to bail out if
	source filesystem becomes inaccessible during parsing

2008-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-05
	* another lil fix to offline2online

2008-08-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-04
	* fixes to offline2online conversion procedure, reported by Andre.

2008-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * tag V00-25-03
	* undo changes to V00-25-02
        
	* tag V00-25-02
	* OutputModuleDialog: add 'keep triggerTriggerEventWithRefs' to
	the standard value of the outputCommands parameter of any output
	module (requested by MZ).

2008-08-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-01
	* fix confdb.db.ConfDB::removeConfiguration(), remove streams &
	datasets as well.

2008-07-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-00
	* add offline->online conversions to
	OnlineConverter::convertConfiguration():
	  - PoolSource to DAQSource (was there already)
	  - PoolOutputModule to ShmStreamConsure (was there already)
	  - set MessageLogger configuration for online
	  - configure essource GlobalTag for online
	  - configure global pset 'options' for online
	  - remove global pset maxEvents for online
	  - add services DQMStore and FUDQMOuputService for online
	  - set all InputTag / string type parameters with value