@@ -1,3 +1,9 @@
+2008-09-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-25-08
+	* first release of confdb.db.ConfDBCreateConfig and
+	test/runCreateConfig
+
 2008-09-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-07
